<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headingLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/line_vertical_0.05"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bluetoothImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/bla"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/wavinghandImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/wavinghandImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/des_waving_hand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wavinghand" />

        <TextView
            android:id="@+id/welcomeHome"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wavinghandImage" />

        <TextView
            android:id="@+id/nameTam"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_horizontal_0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical_0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bodyLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/line_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@+id/line_horizontal_0.3"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/micLayout"
            android:layout_width="155dp"
            android:layout_height="121dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toEndOf="@+id/fanLayout"
            app:layout_constraintTop_toBottomOf="@+id/rainLayout">

            <ImageView
                android:id="@+id/micImage"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/microphone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/thiefLayout"
            android:layout_width="155dp"
            android:layout_height="121dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ledLayout">

            <ImageView
                android:id="@+id/thiefImage"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/criminal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doorLayout"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toEndOf="@+id/ledLayout"
            app:layout_constraintTop_toBottomOf="@+id/humidityLayout">

            <ImageView
                android:id="@+id/doorImage"
                android:layout_width="21dp"
                android:layout_height="26dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dongcua" />

            <TextView
                android:id="@+id/doorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="monospace"
                android:text="@string/doorText"
                android:textColor="#4E342E"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ledLayout"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/celsiusLayout">

            <ImageView
                android:id="@+id/ledImage"
                android:layout_width="21dp"
                android:layout_height="26dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tatden" />

            <TextView
                android:id="@+id/ledText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="monospace"
                android:text="@string/ledText"
                android:textColor="#4E342E"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rainLayout"
            android:layout_width="155dp"
            android:layout_height="121dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toEndOf="@+id/thiefLayout"
            app:layout_constraintTop_toBottomOf="@+id/doorLayout">

            <ImageView
                android:id="@+id/rainImage"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/nomua" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fanLayout"
            android:layout_width="155dp"
            android:layout_height="121dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thiefLayout">

            <ImageView
                android:id="@+id/fanImage"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/fan" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/celsiusLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/celsiusImage"
                android:layout_width="28dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/des_celsius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/thermometer" />

            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tempText"
                app:layout_constraintStart_toEndOf="@+id/celsiusImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tempNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tempNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/celsiusImage" />

            <TextView
                android:id="@+id/tempDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tempDegree"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tempNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/humidityLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/celsiusLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/humidityImage"
                android:layout_width="28dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/des_humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/humidityText"
                app:layout_constraintStart_toEndOf="@+id/humidityImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/humidityNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/humidityNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidityImage" />

            <TextView
                android:id="@+id/humidityPercents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/humidityPercents"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidityNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>